--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -8,6 +8,9 @@
 <div class="container">
     <h1>Welcome, {{ .LoginName }}.</h1>
     <h2>Manage Shortlinks</h2>
+    {{ if eq (len .Links) 0 }}
+        <p>No shortlinks found.<br>Add some below.</p>
+    {{ else }}
     <table>
         <tr>
             <th><input type="checkbox" id="all" onclick="selectAll()"></th>
@@ -21,34 +24,29 @@
         </tr>
         {{ range .Links }}
             <tr>
-                <td><input class="selection" type="checkbox" id="{{ .ShortLink }}"></td>
+                <td><input class="selection" type="checkbox" id="{{ .ID }}"></td>
                 <td><a href="{{ .ShortLinkFull }}">{{ .ShortLink }}</a></td>
                 <td>{{ .Link }}</td>
                 <td>{{ .Clicks }}</td>
                 <td>{{ .AddedOn }}</td>
                 <td>{{ .ExpiresAt }}</td>
                 <td><a class="edit">Edit</a></td>
-                <td><a href="#" onclick="deleteShortlink('{{ .ShortLink }}')" class="delete"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path fill="currentColor" d="M261-120q-24.75 0-42.375-17.625T201-180v-570h-41v-60h188v-30h264v30h188v60h-41v570q0 24-18 42t-42 18H261Zm438-630H261v570h438v-570ZM367-266h60v-399h-60v399Zm166 0h60v-399h-60v399ZM261-750v570-570Z"/></svg></a></td>
+                <td><a href="#" onclick="deleteShortlink('{{ .ID }}')" class="delete"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path fill="currentColor" d="M261-120q-24.75 0-42.375-17.625T201-180v-570h-41v-60h188v-30h264v30h188v60h-41v570q0 24-18 42t-42 18H261Zm438-630H261v570h438v-570ZM367-266h60v-399h-60v399Zm166 0h60v-399h-60v399ZM261-750v570-570Z"/></svg></a></td>
             </tr>
         {{ end }}
     </table>
+    {{ end }}
 
     <div class="buttons">
-        <button id="addButton"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path fill="currentColor" d="M450-200v-250H200v-60h250v-250h60v250h250v60H510v250h-60Z"/></svg> Add Item</button>
-        <button id="removeButton"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path fill="currentColor" d="M261-120q-24.75 0-42.375-17.625T201-180v-570h-41v-60h188v-30h264v30h188v60h-41v570q0 24-18 42t-42 18H261Zm438-630H261v570h438v-570ZM367-266h60v-399h-60v399Zm166 0h60v-399h-60v399ZM261-750v570-570Z"/></svg> Remove Selected</button>
+        <button onclick="window.location.href = '/admin/add';" id="addButton"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path fill="currentColor" d="M450-200v-250H200v-60h250v-250h60v250h250v60H510v250h-60Z"/></svg> Add Item</button>
+        {{ if ne (len .Links) 0 }}
+            <button onclick="deleteSelected();" id="removeButton"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path fill="currentColor" d="M261-120q-24.75 0-42.375-17.625T201-180v-570h-41v-60h188v-30h264v30h188v60h-41v570q0 24-18 42t-42 18H261Zm438-630H261v570h438v-570ZM367-266h60v-399h-60v399Zm166 0h60v-399h-60v399ZM261-750v570-570Z"/></svg> Remove Selected</button>
+        {{ end }}
     </div>
     <script>
-        document.getElementById("addButton").addEventListener("click", function () {
-            window.location.href = "/admin/add";
-        });
-
-        document.getElementById("removeButton").addEventListener("click", function () {
-            deleteSelected();
-        });
-
         const ids = [
             {{ range .Links }}
-            "{{ .ShortLink }}",
+            "{{ .ID }}",
             {{ end }}
         ];
 
