--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -25,7 +25,7 @@
         {{ range .Links }}
             <tr>
                 <td><input class="selection" type="checkbox" id="{{ .ID }}"></td>
-                <td><a href="{{ .ShortLinkFull }}">{{ .ShortLink }}</a></td>
+                <td><a href="#" onclick="copy('{{ .ShortLinkFull }}')">{{ .ShortLink }}</a></td>
                 <td>{{ .Link }}</td>
                 <td>{{ .Clicks }}</td>
                 <td>{{ .AddedOn }}</td>
@@ -63,6 +63,16 @@
                 // send delete request
                 window.location.href = "/admin/remove/" + shortlink;
             }
+        }
+
+        function copy(shortlink) {
+            const el = document.createElement('textarea');
+            el.value = shortlink;
+            document.body.appendChild(el);
+            el.select();
+            document.execCommand('copy');
+            document.body.removeChild(el);
+            alert("Copied to clipboard!");
         }
 
         function select() {
